# Kemii

./: .gitignore  Makefile  README.md  docker-compose.yml  elements.db  package-lock.json  unused_code_archive.txt
.github/workflows/: ci.yml  migrate.yml
backend/: .gitignore  Dockerfile  alembic.ini  auth.py  database.py  debug_endpoint.py  dependencies.py  elements.db  main.py  models.py  openapi.json  pyproject.toml  quest_ai.py  requirements.txt  schemas.py  seed_data.py  seed_data_master.py  seed_users.py  skills_data.py  zoologic.db
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2025_12_11_1129-26a3323f3a05_init_sqlite_db.py  2025_12_11_1132-ea442c567f88_add_nickname_column.py  2025_12_11_1324-2f72e6564205_add_nickname_column2.py  2025_12_11_1330-92aae5fae736_remove_nickname_column.py  2025_12_15_1115-c0c98fd460b1_add_teamname_column.py  2025_12_17_1714-b049e3a44d8e_update_database.py  2025_12_22_1711-1662638e8921_add_skills_column.py  2025_12_23_1016-8d83ea600f7e_update_quest.py  2025_12_23_1031-122f43436109_add_deadline.py  2025_12_23_1650-5db6c97e5810_add_project_end_date.py  2025_12_24_0935-acfc448f7edc_update_supabase.py
backend/api/: admin.py  auth.py  quests.py  team.py  users.py
backend/core/: auth.py  config.py  database.py
backend/data/: README.md
backend/models/: __init__.py
backend/routers/: admin.py  auth.py  quests.py  skills.py  smart_quest.py  teams.py  users.py
backend/schemas/: __init__.py
backend/scripts/: export_openapi.py  mig.bat  seed_data.py  seed_data_master.py  seed_users.py  test.py  test2.py  test_synergy.py  upgrade_db.py
backend/services/: ai.py  matching.py
backend/tests/: __init__.py  conftest.py  test_api_security.py  test_main.py  test_matching.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/__tests__/: matching.test.ts  utils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx  (+1 more)
(+49 files in other folders)
