[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.127.0",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.29",
    "uvicorn>=0.40.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
